--- a/VRChat/94/1246094.html
+++ b/VRChat/94/1246094.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kFEz6AV6UJfaNcrO5d/k3cJbmC0Hk4/Od8DCEUZVKLU="></script>
+    "0y5SIu8nhyFC71atbcEhNwS9N36/eeK/I+5NKWqeIb4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用アバターモデル　茶ねこ","description":"※VRC用はSDK2のセットアップをしています！\n\nVRCを想定して作った3Dアバター、獣人・猫ケモ、茶ねこです。\nまつ毛を無くすと中性的、男の子にもなれます。\nUnityパッケージには無料アセットを用いた揺れものを設定済。\n耳と、尻尾の先端は猫らしさ満点のアニメーションを入れてみました。\n\n--------2020/09/16--------\n追加データをアップロードしました！\n・耳の中の毛をフサフサにしました！\n・DynamicBoneを設定！\n・VRC Avatar Descriptorを設定。オーバーライドも設定。\n・マテリアルをUTS2に変更。（入っている説明書通りに導入してね！）\n・オマケで、灰色ねこのマテリアルと、フリルの服を追加しました。\n--------------------------\n\n\n\n内容物\n・モデルデータ（fbx）\n・モデルデータ（blender）\n・テクスチャ ２枚\n・ＵＶ展開図テクスチャ ２枚\n・Unityパッケージ「茶ねこアップロードセット」\n　・アニメーション４種\n　・マテリアル２つ\n　・まんまるシェーダー\n・茶ねこ説明書（メモ帳）\n\n利用規約\n・学力不足につき日本語にしか対応できません。\n・再配布、転売は禁止です。\n・加工、商用利用は可能、Vtuberも歓迎です。\n\n問い合わせ先はコチラ\nhttps://twitter.com/0chitter0\n\n何かわからないことや、ご要望など積極的に対応していきたいと思っています。私もそこまで詳しくないのですが、わかることは何でも応えます。","url":"https://booth.pm/ja/items/1246094","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/91753d52-c0a0-4325-becb-46f083d22a26/i/1246094/35a9aaa1-517e-4cde-9b0f-c98124daa7bc_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kFEz6AV6UJfaNcrO5d/k3cJbmC0Hk4/Od8DCEUZVKLU="></script>
+    nonce="0y5SIu8nhyFC71atbcEhNwS9N36/eeK/I+5NKWqeIb4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1246094/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               110
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1246094/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               110
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
