--- a/VRChat/10/1241610.html
+++ b/VRChat/10/1241610.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "D3W+3wC4ksFGLwNsE89Q8NcMzVsFjuEz63xzui7xFH4="></script>
+    "4cURjcZa+oxZYa07nARE8diHMibihu8aSZ2p5q1ZIdM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『Z（ゼット）』","description":"オリジナル3Dモデル『Z（ゼット）』ちゃん v1.0\n\n本モデルはVRChat等での使用を想定したオリジナル3Dモデル『Z（ゼット）』ちゃんになります！\n\n△Polygon 65644\nアイトラッキング対応\nフルボディトラッキング対応\nDynamicBone設定済み\nArktoonシェーダー同梱\nVRM同梱\n\n瞬き＋リップシンク15種＋あいうえお＋表情モーフ43種\n表情アニメーション7種設定済み\n\n\n※ 本モデルのUnityPackageをインポートする前にVRCSDK、Arktoon-shaders（同梱）、DynamicBone（お持ちの場合）をインポートしてください。\n","url":"https://booth.pm/ja/items/1241610","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3680"},"image":"https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1241610/ad344590-2846-4fa9-b3fd-adf98abca96a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D3W+3wC4ksFGLwNsE89Q8NcMzVsFjuEz63xzui7xFH4="></script>
+    nonce="4cURjcZa+oxZYa07nARE8diHMibihu8aSZ2p5q1ZIdM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1241610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               115
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1241610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               115
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
