--- a/VRChat/36/1245636.html
+++ b/VRChat/36/1245636.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2/yiy6CExlm/jQmdHiD8i6GU3NVn3mcPVbprJmSkJAk="></script>
+    "GdPOlZA08ArQBVVYRGOl5qJ+NKVkOVckMxc9FDBpZzs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchatのワールド向けアイコン","description":"ICON for VRChat by Coquelicotz\n\nCC0ライセンスです。\n\n商用、再配布、改変、無改変販売等、あなたはあらゆる使い方が無許可で可能です。 \nCommercial use, redistribution, modification, unmodification sales, etc., you can use any way without permission.\n\n謝辞：作成に当たって如月さんにもご協力いただきました。\n\n2019/03/04 v2を公開しました。数字（0～10）および「？」、鍵関連のアイコンを追加しました。","url":"https://booth.pm/ja/items/1245636","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1245636/002f4650-a137-43ad-a1fd-94478f31b9b2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2/yiy6CExlm/jQmdHiD8i6GU3NVn3mcPVbprJmSkJAk="></script>
+    nonce="GdPOlZA08ArQBVVYRGOl5qJ+NKVkOVckMxc9FDBpZzs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1245636/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              365
+                              366
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1245636/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              365
+                              366
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
