--- a/VRChat/29/1240329.html
+++ b/VRChat/29/1240329.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LzaiD1a2R9Mq24qPA0Ykr+375mk6ZesOQFMG+3A3x90="></script>
+    "IyB77PINcGHvgXu9lUyR+WDkJ7Y4ryKOTs5jHOs7Xsg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【Sttila】","description":"オリジナル3D武器モデル「Sttila」\n\n――注意事項――\nこのモデルは2018年に作成されたものです。\n動作は保証いたしません。またサポート外とさせていただきます。\n\n――製品概要――\nVRChat等のアプリケーション、ゲームで使用することを想定した3D武器モデルです。\nシェイプキーで形状を変えることができ、剣、ハンマー、杖、槍、盾それぞれ２種類、合計１０種類への形状変化が可能です。\n\n△ポリゴン数:１２２０\n\n※画像に写っているアバターは付属しません。\n\n――製品内容――\n・unitypackage\n・fbx\n・readme\n\n――利用規約――\n本モデルを購入された時点で本利用規約に同意したものとします。\n本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。\n本モデルの著作権は改変の有無を問わず、製作者である御伽栞が所有します。\n\n◆許可事項\n・改変\n・商用コンテンツ、動画への使用\n\n◆禁止事項\n・再配布、販売（改変の有無を問わず禁止します）\n・本モデルを含んだアバターのpublic化\n・本モデルを含んだアバターペデスタルの設置\n・政治、宗教活動、特定個人、団体への中傷を目的とした使用\n\n◆免責事項\n本モデルを利用することで発生したトラブルや損失、損害に対して、\n制作者は一切責任を負いません。\n本モデルのご使用は使用者の責任において行ってください。\n\n本モデルは予告なくアップデート、販売の停止をする場合があります。\n\n当利用規約において翻訳の都合上、他言語との差異が生じた場合\n日本語の利用規約を適用するものといたします。\n\n何かあれば下記の連絡先までご連絡ください。\n\n連絡先\nTwitter：OtogiSiori\nMail：otogisiori@gmail.com","url":"https://booth.pm/ja/items/1240329","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dc16eb3f-c515-498f-8a3c-f8e7c46beb2d/i/1240329/8d2dbbb9-f4da-4aa0-9f47-799cb831a625_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LzaiD1a2R9Mq24qPA0Ykr+375mk6ZesOQFMG+3A3x90="></script>
+    nonce="IyB77PINcGHvgXu9lUyR+WDkJ7Y4ryKOTs5jHOs7Xsg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240329/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               371
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240329/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               371
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
