--- a/VRChat/74/1245074.html
+++ b/VRChat/74/1245074.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4a2zAb1kDOpEtckoFop8HssnA5mRzkFXCYyI2qXOktY="></script>
+    "WHT6wXorqWJ5qQL1tzuGqoSccpYRB9l8m+74hhURSXE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC向け3Dモデル】ゴーグル(アバターは付属してません）","description":"---VRC向け3Dモデル ゴーグル説明文---\n\n--内容物--\n・ゴーグル本体（マテリアル設定済み）\n・マテリアル(フレーム・レンズ）\n--利用規約--\n特にないです\n自由に使ってください・ω・","url":"https://booth.pm/ja/items/1245074","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/846b942a-5cc2-41b3-bf64-34997a23675e/i/1245074/1f6eefbf-9ab4-4463-a8ec-e1ce1202d830_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4a2zAb1kDOpEtckoFop8HssnA5mRzkFXCYyI2qXOktY="></script>
+    nonce="WHT6wXorqWJ5qQL1tzuGqoSccpYRB9l8m+74hhURSXE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1245074/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1245074/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
