--- a/VRChat/03/1232503.html
+++ b/VRChat/03/1232503.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pkHhEh00dNbDrpiCWU6d/ba2sV4XAjg6gpsN1eRGILY="></script>
+    "10XZIQoTcuvL3yrVMKD5s7hdOZ8Nc9M6h5yTe7A61vI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『天文の女神ベール』","description":"オリジナル3Dモデル『天文の女神ベール』\n\n※このモデルの最新版はVer2.0.1のアーリーモデルです。\nアーリーモデルは定価の半額で販売され、購入者は以降のフルモデルの使用権を有します。\n\n製作者　メシアス\n\n\n■　モデルデータ　■（Ver1.0.3）\n分割版　△29931（着脱可）\n統合版　△39931\n\n翼単体　△2988\n簡易翼　△138\n\n女神像　△30051(31203)\n\n金貨　　△96\n\n同梱マテリアル　36個\n同梱テクスチャ　35枚\n\n初期表情アニメーション　8個\n設定済表情シェイプキー　10個\nMMD用シェイプキー対応\n\nPrefabはDynamicBoneおよびCloth設定済みです。\n\n肌以外のほとんどはモノクロテクスチャおよびノーマルマップテクスチャによって制御されています。\nベースカラーやMatcapカラーを変更することで容易に色改変がおこなえます。\nテクスチャ改変が苦手！しんどい！無理！という方でも気兼ねなく扱えるかと思います。\n\n\n■　同梱品　■\n・Unitypackage（本体）\n・【アセット導入】はじめにお読みください【必読】.txt\n・【重要】購入者限定ショップについて.txt\n・【ご確認ください】内容物.txt\n・モデルデータ（fbx）\n・PSDデータ（顔、身体、ネイル）\n・UVデータ（顔、身体、ネイル）\n・テクスチャ\n・説明書\n\n現在、説明書は簡易版となっております。\n今後、詳細な説明書やショートストーリー等を同梱する予定です。\n\n\n■　VRChat対応　■\n・Unity環境下でHumanoidに対応しています。\n・フルボディトラッキングに対応しています。ただしIKの更新等でうまくいかなくなる場合もあります。\n・初期状態で6つのアニメーションオーバーライドが設定されています。\n・瞬きアニメーションが実装されています。\n・リップシンクが設定されています。\n・時たま腰あたりのコライダーにひっかかりますが、Clothが股間をやさしく護ってくれます。\n・翼が姿勢によって動作します。VRモードでトラッキングがうまくいくと簡単に羽ばたけます。（要DynamicBone）\n・MMDのダンスモーションを使用したワールドで表情とリップシンクが動作します。\n\n\n■　必須・推奨アセット　■\n・Dynamic Bone（Unity assets）\n・Flee MatCap Shaders（Unity assets）\n・VRCSDK\n\n\n■　同梱シェーダー　■\n以下のシェーダーはUnitypackageにて同梱されているためダウンロードする必要はありませんが、バージョン違いの重複等にお気を付けください。\n\n・まんまるしぇーだー2.0\nhttps://miniscape.booth.pm/\n・Unlit_WF_ShaderSuite (v20190331)\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n\n■　使用素材　■\n『翼の表裏(印刷用)』　作者：宮本 桂\nhttps://miyamoto-studio.booth.pm/\n\n\n■　免責事項　■\nこのショップからダウンロードできるものには全てgoddess製データ利用規約が適用されます。\n\ngoddess製データ利用規約\nhttps://13mesias.booth.pm/items/1246809\n\n\n■　更新履歴　■\n2019/09/22\n・『天文の女神ベールVer2.0.1アーリーモデル』公開\n2019/04/06\n・『天文の女神ベールVer1.0.3』更新\n・顔のメッシュ割りを変更\n・SpineとHipまわりのウェイトとコライダー調整\n・MMD用シェイプキーを追加・対応\n・アイトラキングを少し強めに変更\n・bodyをBodyに変更\n・肌テクスチャの焼き直し\n・MMS2.0マテリアルを暗所でも黒くならないように調整\n・ニップレス追加および下着削除\n・制作時の名残のメッシュを削除（必要な場合は購入者限定ショップにて旧Verをお使いください）\n\n\n2019/04/01\n・『天文の女神ベールVer1.0.2』更新\n　ボーンやメッシュの大幅修正\n　女神像同梱\n　金貨同梱\n\n2019/03/02\n・『天文の女神ベールVer1.0.1』公開\n\n2019/02/25\n・『販売ページ』公開\n・『販売予定日』掲載\n・『必須・推奨アセット』掲載\n・『無料頒布物について』掲載\n・無料頒布物『ベールサンプル画像１.jpg』頒布開始\n・規約制定によりレイアウトおよび文言を変更または削除\n\n■更新予定\n・画像説明書の同梱（MMS2.0）\n・ショートストーリーの同梱\n・コライダーの修正\n・肩ウェイトの修正\n・表情シェイプキーの追加\n・同梱シェーダーの追加（UTS、Reflex、Arktoon）\n・髪型の追加（人間界用）\n・衣装の追加（人間界用）","url":"https://booth.pm/ja/items/1232503","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"2500"},"image":"https://booth.pximg.net/c/620x620/0a9539c6-de2d-41b6-a2b1-d5282cf57a0d/i/1232503/e432b1b0-fb5a-4fbf-bdde-ed64b470fd3d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pkHhEh00dNbDrpiCWU6d/ba2sV4XAjg6gpsN1eRGILY="></script>
+    nonce="10XZIQoTcuvL3yrVMKD5s7hdOZ8Nc9M6h5yTe7A61vI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1232503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1232503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
