--- a/VRChat/93/1244093.html
+++ b/VRChat/93/1244093.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2hPABwc1uO63kwvDw2cz6wGYyj3sySqMMwjKXi0nAfo="></script>
+    "OR+vWKu45fx6UjZM9mVz9Wmz+CcrjW5fJiwD15qt4aM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル 『犬用 口輪』","description":"◆本モデルについて◆\nアクセサリーとして使える犬用の口輪です。\nワイルドにキメたいあなたに是非。\n\n\n本モデルはVRChatでの利用を想定した3Dモデルです。\n紐の位置調整用の8種類のシェイプキーを用意しています。\n改変用テクスチャデータを同梱しているので、各種ペイントソフトを用いてテクスチャ改変ができます。\n\n\n≪ スペック ≫\n・△ 1,054 polygon\n・Material数　1\n・Mesh数　1\n・テクスチャ　1kテクスチャ1枚 + Matcap1枚\n・位置調整用シェイプキー　8種類","url":"https://booth.pm/ja/items/1244093","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8cc3b20c-ca47-4fae-af2b-7e9f929ba354/i/1244093/f6bec66c-393a-4e63-b638-49c0a5f4d100_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2hPABwc1uO63kwvDw2cz6wGYyj3sySqMMwjKXi0nAfo="></script>
+    nonce="OR+vWKu45fx6UjZM9mVz9Wmz+CcrjW5fJiwD15qt4aM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1244093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               285
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1244093/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               285
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
