--- a/VRChat/33/1242433.html
+++ b/VRChat/33/1242433.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YwLLMjAlWVRlx7WNkhtL2rXDVjlblJnsdAVPWIMTu28="></script>
+    "JP/4mknNrEEYqI02agF/cOYJtqBe2ov/3muFc2ppm0U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]たまごごはん","description":"※VRCSDK3.0以前のSDKで作成していますのでSDK2を使うと良いです\n\n制作　oga\ntwitter @oga_pleconia\n\n※注意：飯テロアバターは節度を守って使いましょう\n※「サーモン丼」と一緒のプロジェクトに入れると壊れます(一部guidが被っている為)\n\n\n◆データ内容\nTKG.unitypackage…キャラクターに持たせるぐらいの丼サイズ\nTKG_big.unitypackage…これ自体をアバターにする場合を想定した大きめサイズ\nほか、元データ諸々。\n\n・まんまるしぇーだー（みに@Mini_9321_VRさん作）を同梱しています(MMS1.3をmeta被り対策でリネームした物)\n・ダイナミックボーンを入れると揺れます\n・湯気パーティクルが出ます\n\n◆使い方\nunityプロジェクトにパッケージをインポートし、\nシーンファイルをヒエラルキーにドロップしてください。\n\n◆許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n◆制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）\n\n\n\n更新履歴\n190225　初期版公開\n190330　meta被り対策（シェーダ別名化）、テクスチャ更新を統合","url":"https://booth.pm/ja/items/1242433","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/1242433/1f35b3cd-49d4-4b7d-a6d4-60c647d0e539_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YwLLMjAlWVRlx7WNkhtL2rXDVjlblJnsdAVPWIMTu28="></script>
+    nonce="JP/4mknNrEEYqI02agF/cOYJtqBe2ov/3muFc2ppm0U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1242433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              339
+                              340
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1242433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              339
+                              340
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
